# mlir

gemm_mlir_files/: gemm_align.mlir.loops  readme.txt  readme.txt.~1~  tryblisgemm.mlir
test/mlir-cpu-runner/: #cblas_interface.cpp#  CMakeLists.txt  blisgemm.llvm.dialect  blisgemm.loops  cblas.cpp  cblas_interface.cpp  tensor_kernels.h  tryblisgemm.mlir
test/mlir-cpu-runner/blisukr/: blis.h  blisukr.c  blisukr.c.~2~  compilefoo.txt  rdtsc.h
test/mlir-cpu-runner/include/: blisukr.h
